Fix for spacing in #main-wrapper

--- a/core/app/assets/stylesheets/frontend.css.less
+++ b/core/app/assets/stylesheets/frontend.css.less
@@ -301,6 +301,7 @@ a.bookmarklet {
     }
   }
   #main-wrapper {
+    padding: 15px;
     margin-bottom: 172px;
     background: @white;
     .border-radius(4px);
@@ -313,6 +314,7 @@ a.bookmarklet {
 
     header.title {
       background-color: #EDEDED;
+      margin: -15px -15px 0 -15px;
       padding: 10px 16px 6px 19px;
       border-bottom: 1px solid #d8d8d8;
       span.contained-channel-description {
